--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesNavbar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesNavbar.css
@@ -16,6 +16,11 @@
 .navbar .navbar-brand {
     padding: 10px;
 }
+.navbar-brand img {
+    width: 210px; 
+    height: 37px;
+    padding-left: 15%;
+}
 
 .navbar .nav-item {
     padding-right: 15px;
@@ -28,7 +33,89 @@
     padding: 5px 20px 5px 20px;
     color: white;
 }
-/* 
-.nav-item .activ{
+
+.login {
+    display: flex;
+    align-self: center;
+    flex-direction: row;
+}
+
+/* burger */
+.navbar .nav-menu {
+    display: flex;
+  }
+  
+  .nav-menu .nav-item a {
+    display: inline-block;
+    padding: 1rem 1.4rem 1rem 1rem;
+    width: 100%;
+    transition: background 0.3s ease;
+  }
+  
+  .nav-menu .nav-item a:hover {
     font-weight: 500;
-  } */
+  }
+  
+  .hamburger {
+    display: none;
+  }
+  
+  .bar {
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    transition: all 0.3s ease-in-out;
+    background-color: #101010;
+  }
+  
+  /* Responsive */
+  @media only screen and (max-width: 768px) {
+    .nav-menu {
+      position: fixed;
+      z-index: -1;
+      right: -100%;
+      top: 0rem;
+      flex-direction: column;
+      /* This controls the width of the navbar container*/
+      width: 100%;
+      /* This controls the height of the navbar container */
+      height: 40%;
+      text-align: left;
+      transition: 0.3s;
+      box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+      /* This controls the background color of the navbar container*/
+      background-color: #FCF8F8;
+    }
+  
+    .nav-menu.active {
+      left: 0;
+    }
+  
+    .nav-menu li:first-child {
+       margin-top: 4.5rem;
+       border-top: 1px solid #ccc;
+    }
+  
+    .nav-item {
+      width: 100%;
+      border-bottom: 1px solid #ccc;
+    }
+
+    .hamburger {
+      display: block;
+      cursor: pointer;
+    }
+  
+    .hamburger.active .bar:nth-child(2) {
+      opacity: 0;
+    }
+  
+    .hamburger.active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+    }
+  
+    .hamburger.active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+    }
+  }
