--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesNavbar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesNavbar.css
@@ -34,7 +34,7 @@
     color: white;
 }
 
-.login {
+.compile {
     display: flex;
     align-self: center;
     flex-direction: row;
@@ -70,7 +70,7 @@
   }
   
   /* Responsive */
-  @media only screen and (max-width: 768px) {
+  @media only screen and (max-width: 1000px) {
     .nav-menu {
       position: fixed;
       z-index: -1;
