--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesBooking.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesBooking.css
@@ -8,33 +8,57 @@ body {
     background-color: #FCF8F8;
 }
 
-main .info-container { 
+main .side-panel-container { 
     display: flex;
-    justify-content: center;
-    margin: 40px 0 10px 0;
-    margin-top: 15vh;
+    flex-direction: column;
+    /* visibility: hidden; */
+    justify-content: space-evenly;
+    /* margin: 40px 0 10px 0;
+    margin-top: 15vh; */
 }
 
-main .first-in {
+main .header {
     padding: 20px;
     border: 1px solid #FBB503;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     border-top-width: 20px;
     width: 250px;
-    
+    height: 40%;
 }
 
-main .book {
+main .body {
     border: 1px solid #FBB503;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     width: 250px;
     margin-top: 10px;
+    height: 60%;
 }
 
 main .book-desk {
     border-bottom: 1px solid #FBB503;
+}
+
+#ConfirmationModal {
+    top: 300px;
+    left: 640px;
+    /* top: 65%;
+    left: 40%; */
+    /* justify-content: center;
+    align-items: center; */
+    /* background-color: yellow; */
+    z-index: 1;
+}
+
+/* Pang BLUR
+    -gelo
+*/
+.modal-blur {
+    content: "";
+    background: inherit;
+    filter: blur(3px); /* Adjust the blur amount as needed */
+    z-index: -1;
 }
 
 .image {
