Booking Feature Completed! ✅
✅ optimized authentication route (web.php)

--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesBooking.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesBooking.css
@@ -40,7 +40,7 @@ main .book-desk {
     border-bottom: 1px solid #FBB503;
 }
 
-#ConfirmationModal {
+#Modal {
     top: 300px;
     left: 640px;
     /* top: 65%;
