--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
@@ -218,13 +218,13 @@ p {
 }
 
 .text {
-  font-size: medium;
+  font-size: 15px;
   font-weight: 600;
   
 }
 
 .text-data {
-  font-size: 12;
+  font-size: 24px;
   font-weight: bold;
 }
 
