--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
@@ -137,14 +137,6 @@ body {
   height: 30px;
 }
 
-.bg {
-  padding: 2% 0 5% 0;
-  background-color: white;
-  margin-top: 2%;
-  width: 90%;
-
-}
-
 .content {
   display: flex;
   justify-content: center;
@@ -253,6 +245,6 @@ p {
   
 }
 
-.active-accountSet {
+.active-secondaryTabAS {
   background: #FCDF9D;
 }
