--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminSidebar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminSidebar.css
@@ -24,7 +24,7 @@ h1 {
 .wrapper {
     display: flex;
     
-    position: absolute;
+    position: fixed;
 }
 
 /* .main {
@@ -57,7 +57,7 @@ h1 {
 #sidebar {
     width: 75px;
     min-width: 70px;
-    z-index: 1000;
+    z-index: 1;
     transition: all .25s ease-in-out;
     background-color: black;
     display: flex;
@@ -124,7 +124,7 @@ a.sidebar-link:hover{
     content: "";
     display: inline-block;
     padding: 2px;
-    position: absolute;
+    position: fixed;
     right: 1.5rem;
     top: 1.4rem;
     transform: rotate(-135deg);
