--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminNavbar.css
@@ -248,3 +248,9 @@ p {
 .active-secondaryTabAS {
   background: #FCDF9D;
 }
+
+.box {
+  border-radius: 10px;
+  background: linear-gradient(to top, #ffffff 50%, #f0f0f0 50%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
