--- a/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminSidebar.css
+++ b/DeskIt-Hot-Desk-Booking-System/public/css/stylesAdminSidebar.css
@@ -67,7 +67,6 @@ h1 {
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    padding-top: 50%;
 }
 
 #sidebar.expand {
@@ -88,6 +87,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 80%;
 }
 
 #sidebar.expand .toggle-btn i {
@@ -95,6 +95,7 @@ h1 {
     display: flex;
     justify-content: end;
     margin-right: 25px;
+    padding-top: 60px;
 }
 
 #sidebar:not(.expand) a.sidebar-link span {
